# cpp-game-server

./: .gitignore  CMakeLists.txt  Dockerfile
src/database/: domain.h
src/database/app/: unit_of_work.h  use_cases.h  use_cases_impl.cpp  use_cases_impl.h
src/database/postgres/: postgres.cpp  postgres.h
src/database/util/: tagged_uuid.h
src/game_server/: main.cpp  tagged.h
src/game_server/app/: application.cpp  application.h  player_properties.cpp  player_properties.h
src/game_server/app/detail/: app_serializer.cpp  app_serializer.h
src/game_server/handlers/: api_handler.cpp  api_handler.h  command_handler.cpp  command_handler.h  request_handler.cpp  request_handler.h  state_handler.cpp  state_handler.h  target_storage.h
src/game_server/json/: json_constructor.cpp  json_constructor.h  json_loader.cpp  json_tags.h
src/game_server/model/: dynamic_object_properties.cpp  dynamic_object_properties.h  game_properties.cpp  game_properties.h  static_object_properties.cpp  static_object_prorerties.h
src/game_server/model/detail/: collision_detector.cpp  collision_detector.h  geom.h  model_serializer.cpp  model_serializer.h
src/game_server/server/: logger.cpp
tests/: collision-detector-tests.cpp  loot_generator_tests.cpp  model_tests.cpp  state-serialization-tests.cpp
